# agent_3D_compositing

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
dist-extras/: Launch TV Featuring Composer.command
docs/superpowers/plans/: 2026-03-31-offline-mdm-compatible.md  2026-04-01-tv-featuring-composer-v2.md
docs/superpowers/specs/: 2026-03-31-offline-mdm-compatible-design.md  2026-04-01-tv-featuring-composer-v2-design.md
scripts/: download-deps.sh  vendor-install.sh  vendor-pack.sh
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Panels/: CameraPanel.jsx  MattePanel.jsx  ModelLibrary.jsx  PosePanel.jsx  PropertiesPanel.jsx  ReferencePanel.jsx  ScenePanel.jsx
src/components/Toolbar/: Toolbar.jsx
src/components/Viewport/: FigureModel.jsx  HumanoidFigure.jsx  PropModel.jsx  SceneViewport.jsx  ViewportOverlays.jsx
src/lib/: clayMaterial.js  fileLoader.js  tauriBridge.js
src/store/: sceneStore.js
