[package]
name = "tv-featuring-composer"
version = "0.1.0"
description = "TV Featuring Composer — 3D scene layout for AI artwork workflows"
authors = []
edition = "2021"

[lib]
name = "scene_composer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
